Set up CI with Azure Pipelines
[skip ci]

--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -26,6 +26,19 @@ variables:
   vmImageName: 'ubuntu-latest'
 
 stages:
+- stage: SecurityScan
+  displayName: Scan for security Vulnurabilities
+  jobs:  
+  - job: SecurityScan
+    displayName: SecurityScan
+    steps:
+    - task: SnykSecurityScan@1
+      inputs:
+       serviceConnectionEndpoint: 'AZDevOpsSnykServiceConnection'
+       testType: 'app'
+       monitorWhen: 'always'
+       failOnIssues: true
+
 - stage: Build
   displayName: Build and push stage
   jobs:  
