--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -36,7 +36,7 @@ stages:
       inputs:
        serviceConnectionEndpoint: 'AZDevOpsSnykServiceConnection'
        testType: 'app'
-       targetFile: 'CartAPI/CartAPI.csproj'
+       targetFile: 'OnlineShoppingApp.sln'
        monitorWhen: 'always'
        failOnIssues: true
 
