--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -38,7 +38,9 @@ stages:
        testType: 'app'
        targetFile: 'OnlineShoppingApp.sln'
        monitorWhen: 'always'
-       failOnIssues: false
+       failOnIssues: true
+       projectName: 'MicroservicesComm'
+       organization: 'amoljoshi10'
 
 
 - stage: Build
@@ -59,21 +61,6 @@ stages:
         tags: |
           $(tag)
 
-- stage: DcokerImageSecurityScan
-  displayName: Scan for security Vulnurabilities for Docker Images
-  jobs:  
-  - job: DcokerImageSecurityScan
-    displayName: DcokerImageSecurityScan
-    steps:
-    - task: SnykSecurityScan@1
-      inputs:
-       serviceConnectionEndpoint: 'AZDevOpsSnykServiceConnection'
-       testType: 'container'
-       dockerImageName: 'cartapi'
-       dockerfilePath: 'CartAPI/Dockerfile'
-       severityThreshold: 'medium'
-       monitorWhen: 'always'
-       failOnIssues: true
        
 - stage: Deploy
   displayName: Deploy to k8s
