--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -52,18 +52,10 @@ stages:
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        buildContext: $(Build.SourcesDirectory)
-        tags: |
-          $(tag)
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)'
+        tags: '$(tag)'
 
        
-- stage: Deploy
-  displayName: Deploy to k8s
-  jobs:  
-  - job: Deploy
-    displayName: Deploy to k8s
-    pool:
-      vmImage: $(vmImageName)
+
