--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -65,8 +65,8 @@ stages:
   # CELEBRATE
     - task: CopyFiles@2
       inputs:
-        SourceFolder: '$(Build.SourcesDirectory)'
-        Contents: '_temp/**'
+        SourceFolder: '$(Build.SourcesDirectory)/_temp'
+        Contents: '*'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
     - task: PublishBuildArtifacts@1
