--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -65,7 +65,7 @@ stages:
   # CELEBRATE
     - task: CopyFiles@2
       inputs:
-        Contents: '**'
+        Contents: '**\_temp\**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
     - task: PublishBuildArtifacts@1
