--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -43,6 +43,15 @@ stages:
         failOnIssues: true
         additionalArguments: '--json'
 
+- stage: PrintVaraiables
+  displayName: PrintVaraiables Values
+  jobs:  
+  - job: PrintVar
+    displayName: PrintVar
+    steps:
+      - script: |
+          echo $((Build.SourcesDirectory)
+          echo $(Build.ArtifactStagingDirectory)
 
 - stage: Build
   displayName: Build stage
@@ -67,6 +76,7 @@ stages:
       inputs:
         Contents: '**\_temp\**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
 
     - task: PublishBuildArtifacts@1
       inputs:
