Update cartapi-cicd.yaml for Azure Pipelines

--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -66,6 +66,7 @@ stages:
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(Agent.TempDirectory)'
+        Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 
