--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -1,4 +1,4 @@
-# Docker
+  # Docker
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
@@ -72,7 +72,7 @@ stages:
       inputs:
         SourceFolder: '$(Build.SourcesDirectory)'
         Contents: '**'
-        TargetFolder: '$(Common.TestResultsDirectory)'
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
     - task: PublishBuildArtifacts@1
       inputs:
@@ -80,5 +80,10 @@ stages:
         ArtifactName: 'MicroservicesArtifacts'
         publishLocation: 'Container'
         
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Common.TestResultsDirectory)'
+        ArtifactName: 'SnycArtifacts'
+        publishLocation: 'Container'
 
-         
+      
