Update cartapi-cicd.yaml for Azure Pipelines

--- a/Pipelines/cartapi-cicd.yaml
+++ b/Pipelines/cartapi-cicd.yaml
@@ -41,6 +41,8 @@ stages:
         targetFile: 'CartAPI/project.assets.json'
         monitorWhen: 'always'
         failOnIssues: true
+        projectName: 'MicroservicesComm'
+        organization: 'amoljoshi10'
         additionalArguments: '--json'
 
 
