--- a/ingress.yaml
+++ b/ingress.yaml
@@ -10,10 +10,17 @@ spec:
   - host: productapi.c319e6c69b524a658761.eastus.aksapp.io
     http:
       paths:
-      - path: / # Which path is this rule referring to
+      - path: /products # Which path is this rule referring to
         pathType: Prefix
         backend: # How the ingress will handle the requests
           service:
             name: productapi # Which service the request will be forwarded to
+            port: 
+              name: http # Which port in that service
+      - path: /carts # Which path is this rule referring to
+        pathType: Prefix
+        backend: # How the ingress will handle the requests
+          service:
+            name: cartapi # Which service the request will be forwarded to
             port: 
               name: http # Which port in that service
